# observatorio_ceplan

./: .gitignore  README.md  __init__.py  observatorio.py  playground.sql  pyproject.toml  vistas.py
construction/: old_sql_connection.py  old_vistas.py
databases/: rubros_subrubros.json  rubros_subrubros_simple.json  vistas_20240101_20250317.xlsx
observatorio_ceplan/construction/: old_observatorio.py
observatorio_ceplan/core/: observatorio.py
observatorio_ceplan/utils/: ficha.py  observatorio.py
resources/: codigos_repetidos.xlsx  fichas_vistas.xlsx  info_obs.json  rubros_subrubros.json  vistas.db
src/: __init__.py
src/construction/: old_observatorio.py  old_sharepoint.py  old_sql_connection.py
src/models/: __init__.py  departamentos.py  ficha.py  observatorio.py  queries.py  vistas.py
src/observatorio_ceplan/construction/: old_sql_connection.py
src/observatorio_ceplan/core/: observatorio.py
src/observatorio_ceplan/utils/: ficha.py  observatorio.py
src/resources/: info_obs.json  rubros_subrubros_simple.json
src/scripts/: tables_creation.py
utils/: ficha.py  observatorio.py  queries.py  vistas.py
