[project]
name = "observatorio_ceplan"
version = "0.1.0"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["observatorio_ceplan"]
package-dir = {"observatorio_ceplan" = "src"}  # ¡Esta línea es esencial!

[tool.setuptools.package-data]
observatorio_ceplan = ["resources/*.json"]  # Include JSON files
